# transfer_service

./: .gitignore  README.md  clear.sh  docker-compose.yaml  pyproject.toml  ruff.toml  run.sh
google_service/: env.py  main.py  pyproject.toml
google_service/grequests/: auth.py
google_service/src/: env.py  handlers.py  main.py
google_service/src/db/: repository.py
main_service/: .dockerignore  Dockerfile  make_migrations.sh  pyproject.toml  settings.env
main_service/migrations/: env.py
main_service/migrations/versions/: 01638c6140c3_first.py  0feb68bc04d1_.py  1186fc7ebbaa_.py  2498470fb802_.py  3a69a4307637_.py  3b7d33e79ebb_.py  85593f4880d6_.py  d43e72f34af5_.py  e7ac3088e783_f.py  f3cebf244f97_first.py
main_service/src/: env.py  main.py
main_service/src/auth/: env.py  exceptions.py  hashing.py  schemes.py  security.py
main_service/src/db/: exceptions.py  models.py  settings.py
main_service/src/db/repositories/: service.py  token.py
main_service/src/user/: exceptions.py  handlers.py  schemes.py
main_service/tests/: conftest.py  env.py  test_authentication.py  test_registration.py
postman/collections/: google.json  main.json  yandex.json
src/: database.py  env.py  main.py
src/auth/: env.py  exceptions.py  handlers.py  hashing.py  schemes.py  security.py
src/db/: dals.py  models.py  repository.py  settings.py
src/db/repositories/: media.py  object.py  service.py  token.py  user.py
src/user/: actions.py  exceptions.py  handlers.py  schemes.py
worker/: .dockerignore  Dockerfile  env.py  pyproject.toml  settings.env
yandex_service/: Dockerfile  pyproject.toml  settings.env
yandex_service/src/: actions.py  env.py  handlers.py  main.py  schemes.py
yandex_service/src/auth/: security.py
yandex_service/src/cache/: redis.py
yandex_service/src/db/: models.py  repository.py
yandex_service/src/db/repositories/: media.py
yandex_service/src/tasks/: sync_db.py  tasks.py
yandex_service/src/utils/: hashing.py  schemes.py
yandex_service/src/utils/sync/: hashing.py
yandex_service/src/utils/yrequests/: auth_yandex.py  requests.py  sync_requests.py
