[tool.poetry]
name = "transfer-service"
version = "0.1.0"
description = ""
authors = ["saneknapenek <kolesnikovag22@gmail.com>"]
readme = "README.md"
packages = [{include = "transfer_service"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["email"], version = "^2.1.1"}
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.11.1"
python-multipart = "^0.0.6"
psycopg = "^3.1.9"
environs = "^9.5.0"
psycopg-binary = "^3.1.12"


[tool.poetry.group.dev.dependencies]
environs = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
