[tool.poetry]
name = "yandex-service"
version = "0.1.0"
description = ""
authors = ["saneknapenek <kolesnikovag22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
uvicorn = "^0.23.2"
fastapi = "^0.103.1"
httpx = "^0.25.0"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.21"
pillow = "^10.0.1"
imagehash = "^4.3.1"
celery = "^5.3.4"
environs = "^9.5.0"
numpy = "^1.26.0"
psycopg2-binary = "^2.9.8"
redis-om = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
